--- a/ConsoleApplication1/packages.config
+++ b/ConsoleApplication1/packages.config
@@ -1,4 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="EntityFramework" version="6.0.0" targetFramework="net46" />
+  <package id="SQLite.Net.Async-PCL" version="3.1.1" targetFramework="net46" />
+  <package id="SQLite.Net.Core-PCL" version="3.1.1" targetFramework="net46" />
 </packages>
