--- a/Library1/Library1.fsproj
+++ b/Library1/Library1.fsproj
@@ -59,6 +59,7 @@
     <Compile Include="File1.fs" />
     <Content Include="App.config" />
     <Content Include="packages.config" />
+    <Compile Include="Benchmark.fs" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="mscorlib" />
