--- a/ConsoleApplication1/packages.config
+++ b/ConsoleApplication1/packages.config
@@ -3,4 +3,5 @@
   <package id="EntityFramework" version="6.0.0" targetFramework="net46" />
   <package id="SQLite.Net.Async-PCL" version="3.1.1" targetFramework="net46" />
   <package id="SQLite.Net.Core-PCL" version="3.1.1" targetFramework="net46" />
+  <package id="SQLite.Net-PCL" version="3.1.1" targetFramework="net46" />
 </packages>
